include xid as an option

--- a/e2e/embed/template.html
+++ b/e2e/embed/template.html
@@ -20,6 +20,7 @@
       data-ucsv="<%= ucsv %>"
       data-ucv="<%= ucv %>"
       data-ucw="<%= ucw %>"
+      data-xid="<%= xid %>"
     ></div>
     <script async src="<%= base_url %>/embed.js"></script>
   </body>
