--- a/client-admin/public/embed.html
+++ b/client-admin/public/embed.html
@@ -1,36 +1,40 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Polis Embed Demo</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
-  .banner {
-    background-color: #ccc;
-    border-radius: 3px;
-    height: 80px;
-    width: 620px;
-    margin-top: 40px;
-    margin-inline-start: 10px;
-    margin-inline-end: 10px;
-    margin-bottom: 40px;
-  }
-  .paragraph {
-    background-color: #ddd;
-    border-radius: 3px;
-    height: 20px;
-    width: 620px;
-    margin-top: 20px;
-    margin-inline-start: 10px;
-    margin-inline-end: 10px;
-  }
-  .last-line {
-    width: 100px;
-  }
-  .spacer {
-    height: 20px;
-  }
+    .banner {
+      background-color: #ccc;
+      border-radius: 3px;
+      height: 80px;
+      width: 620px;
+      margin-top: 40px;
+      margin-inline-start: 10px;
+      margin-inline-end: 10px;
+      margin-bottom: 40px;
+    }
+
+    .paragraph {
+      background-color: #ddd;
+      border-radius: 3px;
+      height: 20px;
+      width: 620px;
+      margin-top: 20px;
+      margin-inline-start: 10px;
+      margin-inline-end: 10px;
+    }
+
+    .last-line {
+      width: 100px;
+    }
+
+    .spacer {
+      height: 20px;
+    }
   </style>
 
 </head>
@@ -38,17 +42,17 @@
 <body style="width: 100%">
 
   <script>
-  var polis = window.polis = window.polis || {};
-  polis.on = polis.on || {};
-  polis.on.resize = [
-    function(o) {
-      var iframe = o.iframe;
-      var data = o.data;
-      // Here's where you can do something with the resize event
-      console.dir(data);
-      return false; // Return true to prevent default resize handler found in https://pol.is/embed.js
-    }
-  ];
+    var polis = window.polis = window.polis || {};
+    polis.on = polis.on || {};
+    polis.on.resize = [
+      function (o) {
+        var iframe = o.iframe;
+        var data = o.data;
+        // Here's where you can do something with the resize event
+        console.dir(data);
+        return false; // Return true to prevent default resize handler found in https://pol.is/embed.js
+      }
+    ];
   </script>
 
   <div style="width: 620px; margin: auto;">
@@ -72,7 +76,7 @@
 
 
 
-  <!--
+    <!--
 
       data-ucv="0"
       data-ucw="0"
@@ -83,25 +87,11 @@
       data-show_vis="false"
       data-auth_needed_to_vote="true"
       data-auth_needed_to_write="false"
-      data-auth_opt_fb="true"
-      data-auth_opt_tw="false"
       data-auth_opt_allow_3rdparty="true"
   -->
 
-    <div
-      class="polis"
-
-      data-border="none"
-      data-border_radius="0px";
-      data-padding="0px";
-
-      data-width="320px"
-
-      data-ucsf="0"
-      data-ui_lang="fr"
-
-      data-conversation_id="2arcefpshi"
-    >
+    <div class="polis" data-border="none" data-border_radius="0px" ; data-padding="0px" ; data-width="320px"
+      data-ucsf="0" data-ui_lang="fr" data-conversation_id="2arcefpshi">
     </div>
   </div>
 
@@ -109,4 +99,5 @@
 
 
 </body>
+
 </html>
