--- a/client-admin/public/index.html
+++ b/client-admin/public/index.html
@@ -16,6 +16,10 @@
       font-variant-ligatures: none;
     }
   </style>
+  <script
+    async
+    src="https://js.stripe.com/v3/buy-button.js">
+  </script>
 </head>
 
 <body class="viewport avenir">
